--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^4.5.2",
+    "chart.js": "^2.9.3",
+    "moment": "^2.29.0",
     "next": "9.5.3",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-bootstrap": "^1.3.0",
+    "react-chartjs-2": "^2.10.0",
+    "react-dom": "16.13.1",
+    "react-google-login": "^5.1.21"
   }
 }
