--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.31",
+    "@fortawesome/free-solid-svg-icons": "^5.15.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.10.0",
     "bootstrap": "^4.5.2",
     "chart.js": "^2.9.3",
     "moment": "^2.29.0",
@@ -15,7 +21,6 @@
     "react": "16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-chartjs-2": "^2.10.0",
-    "react-datepicker": "^3.2.2",
     "react-dom": "16.13.1",
     "react-google-login": "^5.1.21"
   }
