--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^1.3.0",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "16.13.1",
-    "react-google-login": "^5.1.21"
+    "react-google-login": "^5.1.21",
+    "sweetalert2": "^10.3.5"
   }
 }
